--- a/index.html
+++ b/index.html
@@ -6,20 +6,32 @@
 
 <body>
     <div id='Calculator'>
+
+        <div>
         <button id = 'btn1' class = 'calcBtn'>1</button>
         <button id = 'btn2' class = 'calcBtn'>2</button>
         <button id = 'btn3' class = 'calcBtn'>3</button>
-        <button id = 'btn4' class = 'calcBtn'>4</button>
-        <button id = 'btn5' class = 'calcBtn'>5</button>
-        <button id = 'btn6' class = 'calcBtn'>6</button>
-        <button id = 'btn7' class = 'calcBtn'>7</button>
-        <button id = 'btn8' class = 'calcBtn'>8</button>
-        <button id = 'btn9' class = 'calcBtn'>9</button>
         <button id = 'btnPlus' class = 'calcBtn'>+</button>
-        <button id = 'btnSubtract' class = 'calcBtn'>-</button>
-        <button id = 'btnDiv' class = 'calcBtn'>/</button>
-        <button id = 'btnMult' class = 'calcBtn'>*</button>
-        <button id = 'btnequals' class = 'calcBtn'>=</button>
+    </div>
+
+    <div>
+            <button id = 'btn4' class = 'calcBtn'>4</button>
+            <button id = 'btn5' class = 'calcBtn'>5</button>
+            <button id = 'btn6' class = 'calcBtn'>6</button>
+            <button id = 'btnSubtract' class = 'calcBtn'>-</button>
+        </div>
+
+        <div>
+            <button id = 'btn7' class = 'calcBtn'>7</button>
+            <button id = 'btn8' class = 'calcBtn'>8</button>
+            <button id = 'btn9' class = 'calcBtn'>9</button>
+            <button id = 'btnDiv' class = 'calcBtn'>/</button>
+
+        </div>
+        <div>
+            <button id = 'btnMult' class = 'calcBtn'>*</button>
+            <button id = 'btnequals' class = 'calcBtn'>=</button>
+        </div>
     </div>
 </body>
 </html>
